--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -24,6 +24,11 @@ spring:
           type:
             descriptor:
               sql: trace
+  data:
+    redis:
+      host: localhost
+      port: 6379
+      password: 1234
 
 jwt:
   secret-key: ${JWT_SECRET}
