--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -10,7 +10,7 @@ spring:
       path: /h2-console
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: validate
     properties:
       hibernate:
         show_sql: true
@@ -47,3 +47,9 @@ oauth:
     client-id: ${APPLE_CLIENT_ID}
     url:
       auth: https://appleid.apple.com
+  spotify:
+    client-id: ${SPOTIFY_CLIENT_ID}
+    client-secret: ${SPOTIFY_CLIENT_SECRET}
+    url:
+      auth: https://accounts.spotify.com
+      api: https://api.spotify.com
