--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
         run: docker build -t ghcr.io/musicpedia/mupie-api:${{ env.IMAGE_VERSION }} .
 
       - name: Login to GitHub Container Registry
-        run: echo "${{ secrets.CONTAINER_REGISTRY_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+        run: docker login ghcr.io -u ${{ github.actor }} --password-stdin < ${{ secrets.CONTAINER_REGISTRY_TOKEN }}
 
       - name: Push Docker image to GitHub Container Registry
         run: docker push ghcr.io/musicpedia/mupie-api:${{ env.IMAGE_VERSION }}
