--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,12 +10,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up JDK 17
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
-          java-version: 17
+          java-version: '17'
 
       - name: Set IMAGE_VERSION from Secrets
         run: echo "IMAGE_VERSION=${{ secrets.IMAGE_VERSION }}" >> $GITHUB_ENV
