--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,17 +18,18 @@ jobs:
           distribution: 'zulu'
           java-version: '17'
 
-      - name: Set IMAGE_VERSION from Secrets
-        run: echo "IMAGE_VERSION=${{ secrets.IMAGE_VERSION }}" >> $GITHUB_ENV
-
       - name: Build JAR file
         run: ./gradlew build -x test
 
       - name: Build Docker image
-        run: docker build -t ghcr.io/musicpedia/mupie-api:${{ env.IMAGE_VERSION }} .
+        run: docker build -t ghcr.io/musicpedia/mupie-api:${{ secrets.IMAGE_VERSION }} .
 
       - name: Login to GitHub Container Registry
-        run: docker login ghcr.io -u ${{ github.actor }} --password-stdin < ${{ secrets.CONTAINER_REGISTRY_TOKEN }}
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.CONTAINER_REGISTRY_TOKEN }}
 
       - name: Push Docker image to GitHub Container Registry
-        run: docker push ghcr.io/musicpedia/mupie-api:${{ env.IMAGE_VERSION }}
+        run: docker push ghcr.io/musicpedia/mupie-api:${{ secrets.IMAGE_VERSION }}
