feat: 게스트 로그인 구현

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -53,3 +53,6 @@ oauth:
     url:
       auth: https://accounts.spotify.com
       api: https://api.spotify.com
+
+guest:
+  member-id: ${GUEST_MEMBER_ID}
