--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -15,6 +15,11 @@ spring:
   jpa:
     hibernate:
       ddl-auto: validate
+    generate-ddl: false
+  flyway:
+    enabled: true
+    baseline-on-migrate: true
+    locations: classpath:db/migration/{vendor}
 
 
 jwt:
