chore: db migration 설정

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -29,6 +29,8 @@ spring:
       host: localhost
       port: 6379
       password: 1234
+  flyway:
+    enabled: false
 
 jwt:
   secret-key: ${JWT_SECRET}
