--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,8 @@ dependencies {
 
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
-	implementation 'org.flywaydb:flyway-core:6.4.2'
+	implementation 'org.flywaydb:flyway-core:9.16.0'
+	implementation 'org.flywaydb:flyway-mysql:9.16.0'
 }
 
 tasks.named('test') {
