--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,8 @@ dependencies {
 
 	implementation 'org.flywaydb:flyway-core:9.16.0'
 	implementation 'org.flywaydb:flyway-mysql:9.16.0'
+
+	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 }
 
 tasks.named('test') {
