--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -32,6 +32,15 @@ spring:
   flyway:
     enabled: false
 
+cloud:
+  aws:
+    credentials:
+      access-key: ${S3_ACCESS_KEY}
+      secret-key: ${S3_SECRET_KEY}
+    s3:
+      bucket: ${BUCKET_NAME}
+    region: ap-northeast-2
+
 jwt:
   secret-key: ${JWT_SECRET}
 
