--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -22,6 +22,16 @@ spring:
     locations: classpath:db/migration/{vendor}
 
 
+cloud:
+  aws:
+    credentials:
+      access-key: ${S3_ACCESS_KEY}
+      secret-key: ${S3_SECRET_KEY}
+    s3:
+      bucket: ${BUCKET_NAME}
+    region: ap-northeast-2
+
+
 jwt:
   secret-key: ${JWT_SECRET}
 
