--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -46,16 +46,16 @@ jwt:
 
 oauth:
   kakao:
-    client-id: ${KAKAO_CLIENT_ID}
+    client-ids: ${KAKAO_CLIENT_ID}
     url:
       auth: https://kauth.kakao.com
       api: https://kapi.kakao.com
   google:
-    client-id: ${GOOGLE_CLIENT_ID}
+    client-ids: ${IOS_GOOGLE_CLIENT_ID}, ${ANDROID_GOOGLE_CLIENT_ID}
     url:
       auth: https://accounts.google.com
   apple:
-    client-id: ${APPLE_CLIENT_ID}
+    client-ids: ${APPLE_CLIENT_ID}
     url:
       auth: https://appleid.apple.com
   spotify:
